fix border sidebar top and overflow-y plalist sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,13 @@ body {
 .wrapper {
     height: 100vh;
     background-color: var(--color-primary);
-    min-width: 576px;
+    min-width: 550px;
 }
 
 main {
-width: calc(100% - 200px);
-padding: 100px 20px 10px 20px;
-color: var(--color-white);
+    width: calc(100% - 200px);
+    padding: 100px 20px 10px 20px;
+    color: var(--color-white);
     overflow-y: auto;
 }
 
@@ -132,9 +132,10 @@ nav a:hover {
     color: var(--color-white);
 }
 
-nav ul a {
+nav ul li a {
     text-transform: uppercase;
     padding: 13px 15px;
+    display: block;
 }
 
 /* sidebar */
@@ -143,7 +144,7 @@ nav ul a {
     color: var(--color-secondary);
     width: 200px;
     height: 100%;
-    overflow-y: auto;
+    
 }
 
 /* sidebar */
@@ -152,6 +153,9 @@ nav ul a {
     margin-bottom: 20px;
     padding-left: 10px;
     padding-top: 10px;
+}
+.side-top{
+    height: calc(100% - 80px);
 }
 
 .icon-side {
@@ -174,25 +178,31 @@ nav ul a {
 
 #sidebar ul img {
     width: 30px;
+    opacity: 0.7;
+}
+
+#sidebar ul img:hover{
+    opacity: 1;
 }
 
 .list-top {
     padding-left: 5px;
 }
 
-.list-top ul li a {
-    border-left: 3px solid rgba(0, 0, 0, 0);
+.list-top ul li {
+    border-left: 3px solid transparent;
     margin-bottom: 5px;
     font-weight: 600;
 }
 
 .list-top ul li:hover {
-    border-left: 3px solid var(--color-green);
+    border-left-color: var(--color-green);
 }
 
 
 .playlist {
     padding-left: 10px;
+    overflow-y: auto;
 }
 
 .playlist h4 {
@@ -210,6 +220,10 @@ nav ul a {
 
 .playlist ul li {
     margin-bottom: 15px;
+}
+
+.bottom-side{
+    height: 80px;
 }
 
 .bottom-side img {
@@ -460,7 +474,7 @@ nav ul a {
 
 @media screen and (max-width: 992px) {
     .card {
-        width: calc(100% / 2 - 20px);
+        width: calc(100% / 3 - 20px);
     }
 
     .tool-left-icon{
